--- a/configuration.conf
+++ b/configuration.conf
@@ -1,8 +1,8 @@
 #!/usr/bin/env bash
 # Configuration file for yandere-wallpaper
-# Source this file before running: source ~/Ryona/yandere-wallpaper.conf
-# Then run: bash ~/Ryona/yandere-wallpaper.sh
-# Or override values inline: STOCK_TARGET=50 bash ~/Ryona/yandere-wallpaper.sh
+# Source this file before running: source ~/Ryona/configuration.conf
+# Then run: bash ~/Ryona/yandere.sh
+# Or override values inline: STOCK_TARGET=50 bash ~/Ryona/yandere.sh
 
 # ===========================================
 # IMAGE SOURCE SETTINGS
