--- a/configuration.conf
+++ b/configuration.conf
@@ -20,18 +20,23 @@ MIN_HEIGHT=900      # Min height for landscape images
 # ===========================================
 # COLLAGE SETTINGS
 # ===========================================
-COLLAGE_MODE=1          # Enable collage mode (1=enabled, 0=disabled)
-COLLAGE_MIN_IMAGES=3    # Min images in collage
-COLLAGE_MAX_IMAGES=4    # Max images in collage
-STOCK_TARGET=30          # Number of images to keep in stock
-PORTRAIT_MIN_WIDTH=700   # Min width for portrait images
-PORTRAIT_MIN_HEIGHT=1000 # Min height for portrait images
+COLLAGE_MODE=2          # Collage mode: 0=single landscape only, 1=collage from stock portraits, 2=alternating collage/landscape mode (Mode 2 uses STOCK_TARGET for portraits and ~STOCK_TARGET/3 for landscapes)
+STOCK_TARGET=30          # Number of images to keep in stock: 30 total for Mode 1 (also Mode 2 collage stock target)
+
+
+# SLIDESHOW
+# Set to 0 to disable slideshow. Set to >1 to run the script repeatedly every N minutes.
+SLIDESHOW_MINUTES=2
+# Optional: If you want a status bar to show the remaining time until the next slide, set this to a writable file path and have the bar read it.
+#NEXT_WALLPAPER_COUNTDOWN_PATH="$HOME/.cache/yandere-wallpaper/next-wallpaper-countdown"
 
 # ===========================================
 # DOWNLOAD SETTINGS
 # ===========================================
-DOWNLOAD_THREADS=8  # Concurrent download threads
+DOWNLOAD_THREADS=16  # Concurrent download threads
 RUN_TIMEOUT=300     # Timeout in seconds (5 minutes)
+DOWNLOAD_HELPER_INTERVAL=30  # Seconds between helper cycles (set DOWNLOAD_HELPER_INTERVAL=<sec>)
+DOWNLOAD_HELPER_THRESHOLD=0.5  # Refill when stock drops below this fraction (0.1-0.9)
 
 # ===========================================
 # UI SETTINGS
@@ -48,6 +53,5 @@ MIN_TILE_WIDTH=500     # Minimum tile width for collage
 # Environment variable alternative: YANDERE_RATINGS="questionable,explicit"
 # ===========================================
 safe=0
-questionable=1
+questionable=0
 explicit=1
-
